# matterify

./: AGENTS.md  README.md  pyproject.toml  spec_matterify.md
src/matterify/: __init__.py  cache.py  cli.py  constants.py  core.py  enums.py  extractor.py  hasher.py  models.py  parser.py  scanner.py  types.py
src/matterify/utils/: __init__.py
tests/: conftest.py  test_cache.py  test_cli.py  test_core.py  test_export_cli.py  test_extractor.py  test_models.py  test_parser.py  test_scan_cli.py  test_scanner.py  test_utils.py
