[project]
name = "matterify"
dynamic = ["version"]
description = "Extract and aggregate YAML frontmatter from Markdown files into structured JSON"
readme = "README.md"
requires-python = ">=3.12"

keywords = ["obsidian", "wikilink", "parser", "text-processing", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
    "pyyaml>=6.0",
]
license = {file = "LICENSE"}
authors = [
    {name = "Christian Gröling", email = "contact@christiangroeling.de"}
]



[project.urls]
Homepage = "https://github.com/chgroeling/matterify"
Repository = "https://github.com/chgroeling/matterify"
Issues = "https://github.com/chgroeling/matterify/issues"

[project.scripts]
matterify = "matterify.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "types-pyyaml>=6.0.12.20250915",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "S",     # flake8-bandit (security issues)
    "PERF",  # perflint (performance anti-patterns)
    "LOG",   # flake8-logging (logging-specific issues)
    "BLE",   # flake8-blind-except (prevents catch-all except: clauses)
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort (import sorting)
    "B",     # flake8-bugbear (common design flaws and bugs)
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade (upgrades syntax to modern Python)
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify (reduces code complexity)
    "TCH",   # flake8-type-checking (manages type-checking imports)
    "PTH",   # flake8-use-pathlib (enforces modern path handling)
    "ASYNC", # flake8-async (asyncio-specific best practices)
    "FLY",   # flynt (converts static strings to f-strings)
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "S101",  # allow pytest assertions in tests
]


[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--verbose",
]
